<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_add_tasks"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chyourgui.addTasks">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical" android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView android:id="@+id/imageView3" android:layout_width="match_parent"
            android:layout_height="40dp" app:srcCompat="@drawable/logo" />

        <TextView android:id="@+id/textView10" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="ADD TASK"
            android:textAlignment="center" android:textColor="@android:color/black" android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="Task Title" android:textColor="@android:color/black"
            android:textSize="17sp" android:textStyle="normal|bold" />

        <EditText android:id="@+id/titleVar" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="#99aeaaaa" android:ems="10"
            android:hint="enter task title here" android:inputType="textPersonName"
            android:textSize="15sp" android:textStyle="normal|bold" />

        <TextView android:id="@+id/textView11" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="Description"
            android:textColor="@android:color/black" android:textSize="17sp"
            android:textStyle="normal|bold" />

        <EditText android:id="@+id/descriptionVar" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="#99aeaaaa" android:ems="10"
            android:hint="describe what you need" android:inputType="textPersonName"
            android:textColor="@android:color/white" android:textSize="15sp"
            android:textStyle="normal|bold" />


        <TextView
            android:text="Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textStyle="normal|bold"
            android:textSize="17sp"
            android:textColor="@android:color/black" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:entries="@array/category_array"
            android:background="#99aeaaaa" />

        <TextView android:id="@+id/textView17" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="Location"
            android:textColor="@android:color/black" android:textSize="17sp"
            android:textStyle="normal|bold" />

        <EditText android:id="@+id/locationVar" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="#99aeaaaa" android:ems="10"
            android:hint="enter location here" android:inputType="textPersonName"
            android:textSize="15sp" android:textStyle="normal|bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView44" />

        <TextView android:id="@+id/textView13" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="Complete by this time"
            android:textColor="@android:color/black" android:textSize="17sp"
            android:textStyle="normal|bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="195dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="Start Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView52"
                    android:textSize="15sp"
                    android:textStyle="normal|bold" />

                <TextView android:id="@+id/textView5" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Month"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/month" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/month_array" android:prompt="@string/month_prompt" />

                <TextView android:id="@+id/textView16" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Day"
                    android:textColor="@android:color/black" android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <Spinner android:id="@+id/day" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/day_array" android:prompt="@string/day_prompt" />

                <TextView android:id="@+id/textView18" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Hour"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/hour" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/hour_array" android:prompt="@string/hour_prompt" />

                <TextView android:id="@+id/textView19" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Minute"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/minute" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/minute_array" android:prompt="@string/minute_prompt" />

                <TextView android:id="@+id/textView20" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="am/pm"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/ampm" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/ampm_array" android:prompt="@string/ampm_prompt" />

                <TextView
                    android:text="End Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView47"
                    android:textStyle="normal|bold"
                    android:textSize="15sp" />

                <TextView android:id="@+id/textView99" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Month"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/month2" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/month_array" android:prompt="@string/month_prompt" />

                <TextView android:id="@+id/textView100" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Day"
                    android:textColor="@android:color/black" android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <Spinner android:id="@+id/day2" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/day_array" android:prompt="@string/day_prompt" />

                <TextView android:id="@+id/textView101" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Hour"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/hour2" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/hour_array" android:prompt="@string/hour_prompt" />

                <TextView android:id="@+id/textView102" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="Minute"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/minute2" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/minute_array" android:prompt="@string/minute_prompt" />

                <TextView android:id="@+id/textView103" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="am/pm"
                    android:textColor="@android:color/black" android:textStyle="normal|bold" />

                <Spinner android:id="@+id/ampm2" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:background="#99aeaaaa"
                    android:entries="@array/ampm_array" android:prompt="@string/ampm_prompt" />
            </LinearLayout>
        </ScrollView>
        <![CDATA[
        android:id="@+id/spinner"
        android:entries="Month" />
        android:id="@+id/spinner2"
        android:entries="Day" />
        android:id="@+id/spinner3"
        android:entries="Hour" />
            android:id="@+id/spinner4"
            android:entries="Minute" />
        android:id="@+id/spinner5"
        android:entries="ampm" />
        ]]>

        <Button android:id="@+id/bAdd" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text=" Add to Tasks" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="go back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bGoBack4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>